Update letter titles and content in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 body {
   background-color: #ffffff;
   color: #222222;
-  font-family: Arial, sans-serif;
+  font-family: Times New Roman, sans-serif;
   margin: 40px;
   line-height: 1.6;
 }
@@ -60,26 +60,47 @@ h1 {
 <div class="subtitle">Click a title to read the letter.</div>
 
 <!-- Letter 1 -->
-<button class="accordion">Day 1 — Missing You</button>
+<button class="accordion">February 27 — Missing You</button>
 <div class="panel">
   <p>
-  Hi.<br><br>
-  Today was harder than I expected.<br>
-  I almost messaged you.<br>
-  Not to disturb your peace — but because you still feel like home.<br><br>
-  I’m learning how to sit with the silence. It’s not easy.<br><br>
-  But I’m trying.
+  Hi,<br><br>
+  Ilang beses kong natagpuan ang sarili ko sa convo natin.<br>
+  Ilang beses muntik magchat ng update or paalam.<br>
+  Ilang beses gusto kang ichat kasi miss na talaga kita.<br>
+  Pero naisip ko na hindi pwede.<br>
+  I will respect your peace.<br>
+  Kahit na ang sakit.<br>
+  Miss ko ka yung tahanan ko, miss na kita sobra.<br>
+  It's only been a day pero ang hirap na.<br>
+  Ang hirap na wala ka pero wala akong magagawa kasi yan ang mas makabubuti sayo.<br>
+  Ang sakit pero yan ang kailangan mo eh.<br>
   </p>
 </div>
 
 <!-- Letter 2 -->
-<button class="accordion">Day 2 — Fear</button>
+<button class="accordion">February 28— Fear</button>
 <div class="panel">
   <p>
-  Today I felt lost again.<br>
-  Missing you hits differently when there’s silence.<br>
-  But I remind myself — your peace matters more than my panic.<br><br>
-  I will survive this wave.
+  Hi, <br><br>
+  Masaya ako na nagchat ka.<br>
+  Pero at the same time natakot, natatakot ako sa mangyayari bukas.<br>
+  Baka ito na yung last, baka bukas tuluyan mo na talagang tapusin.<br>
+  Nakakatakot.<br>
+  Ang daming pumapasok sa isip ko.<br>
+  Hindi ko kaya mawala ka.<br>
+  This past years sayo umiikot mundo ko.<br>
+  I miss our chats.<br>
+  Yung everyday convos natin.<br>
+  Yung asaran na napipikon kita hehe.<br>
+  Yung goodnights, sleepwells, good mornings,<br>
+  Yung mga imissyouhan, ilys,<br>
+  Mga chikahan natin, mga taong nilalait natin,<br>
+  Yung updates, lambingan, tampuhan, sermonan.<br>
+  I really miss you, I miss us.<br><br>
+  But looking at the bright side,<br>
+  Makikita naman kita bukas,<br>
+  Mayayakap, kahit siguro last na.<br>
+  I'm really looking forward to seeing you.<br>
   </p>
 </div>
 
