--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>Letters I Never Sent</title>
 <style>
 body {
-  background-color: #ffffff;
-  color: #222222;
+  background-color: #000000;
+  color: #ffffff;
   font-family: Times New Roman, sans-serif;
   margin: 40px;
   line-height: 1.6;
