Modify styles for improved color scheme
Updated colors for better contrast and readability.

--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@ h1 {
   font-weight: normal;
   font-size: 28px;
   margin-bottom: 5px;
+  color: #ffffff;
 }
 
 .subtitle {
   font-size: 14px;
-  color: #777;
+  color: #cccccc;
   margin-bottom: 30px;
 }
 
 .accordion {
-  background-color: #f9f9f9;
+  background-color: #111111;
+  color: #ffffff;
   cursor: pointer;
   padding: 15px 20px;
   width: 100%;
@@ -39,17 +41,18 @@ h1 {
 }
 
 .accordion:hover {
-  background-color: #eee;
+  background-color: #333333;
 }
 
 .panel {
   padding: 0 20px;
   display: none;
-  background-color: #fefefe;
+  background-color: #111111;
+  color: #ffffff;
   overflow: hidden;
-  border-left: 2px solid #ccc;
-  border-right: 2px solid #ccc;
-  border-bottom: 2px solid #ccc;
+  border-left: 2px solid #555555;
+  border-right: 2px solid #555555;
+  border-bottom: 2px solid #555555;
 }
 </style>
 </head>
