--- a/index.html
+++ b/index.html
@@ -109,8 +109,19 @@ h1 {
 
 <script>
 var acc = document.getElementsByClassName("accordion");
+
 for (var i = 0; i < acc.length; i++) {
   acc[i].addEventListener("click", function() {
+
+    // Loop through all panels and close the others
+    for (var j = 0; j < acc.length; j++) {
+      if (acc[j] !== this) { // lahat maliban sa current
+        acc[j].classList.remove("active");
+        acc[j].nextElementSibling.style.display = "none";
+      }
+    }
+
+    // Toggle current panel
     this.classList.toggle("active");
     var panel = this.nextElementSibling;
     if (panel.style.display === "block") {
