--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@ if (userPass !== password) {
   </p>
 </div>
 
+<button class="accordion">February 29 - The Moment of Truth</button>
+<div class="panel">
+  <p>
+    Hi, <br><br>
+  </p>
+</div>
+
 <script>
 // ONE LETTER OPEN AT A TIME ACCORDION
 var acc = document.getElementsByClassName("accordion");
